# dogsheep-beta

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
dogsheep_beta/: __init__.py  cli.py  utils.py
dogsheep_beta/templates/: beta.html
tests/: test_cli.py  test_plugin.py
